--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,10 +1,10 @@
 # mysite_uwsgi.ini file
 [uwsgi]
-logger = file:/home/server-admin/taskserver/uwsgi.log
+#logger = file:/home/server-admin/taskserver/uwsgi.log
 
 # the base directory (full path)
 
-chdir = /home/server-admin/taskserver/taskserver
+chdir = /home/server-admin/taskserver
 
 # Django's wsgi file
 
@@ -23,9 +23,9 @@ processes = 11
 
 # the socket (use the full path to be safe
 
-socket = /home/server-admin/taskserver/taskserver.socket
+socket = /home/server-admin/taskserver/taskserver.sock
 
 # ... with appropriate permissions - may be needed
 chmod-socket = 666
 # clear environment on exit
-vacuum = true
+#vacuum = true
